implementing secure api methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=demo
 server.port=8080
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://675a9d31-c4a1-4e9b-bcf6-d0bd1bc0c01f.ciamlogin.com/675a9d31-c4a1-4e9b-bcf6-d0bd1bc0c01f/v2.0
+
+
