more hard coding env var

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=demo
 server.port=8080
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${JWT_ISSUER_URI}
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=${JWT_ISSUER_URI}
 #accepted.aud=${ACCEPTED_AUD}
 #public.scope=${PUBLIC_SCOPE}
